tests/file_SyntaxError/file_SyntaxError_3_expected.txt
tests/file_SyntaxError/file_SyntaxError_3.ml:1 0-1
let a = (1, 2
^ the syntax's' wrong.
Note: the location indicated might not be accurate.
